[metadata]
name = linuxforhealth-edi
version = attr: edi.__version__
description = LinuxForHealth EDI provides a standard workflow for processing health care data regardless of format.
long_description: file: README.md
long_description_content_type = text/markdown
license: Apache 2.0
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Healthcare Industry
    Intended Audience :: Developers

[options]
include_package_data = True
install_requires =
    pyaml >=20.4.0,<21.0.0
    lxml >=4.6.3,<5.0.0
    pydantic >=1.8.2,<2.0.0
    python-dotenv >= 0.19.0,<0.50.0
    hl7 >=0.4.2,<1.0.0
    fhir.resources >= 6.1.0,<7.0.0
    linuxforhealth-x12 >= 0.53.0,<1.0.0

packages=find:
package_dir=
    =src
python_requires = >= 3.8
zip_safe = False

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    cli = edi.cli:main
    black = black:patched_main

[options.extras_require]
dev = black; pre-commit; pytest
